--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "@types/node": "^18.0.6",
     "telegraf": "^4.16.3"
   }
